--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="UsersTxt">Users:</string>
+    <string name="create_user">Create User</string>
+    <string name="amount_text">Amount</string>
+    <string name="to_text">TO</string>
+    <string name="transfer_history">Transfer History</string>
+    <string name="delete_user">Delete User</string>
+    <string name="name_text">Name</string>
+    <string name="email_text">Email</string>
+    <string name="register_text">Register</string>
+    <string name="transfer_text">Transfer</string>
 </resources>
