--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="email_text">Email</string>
     <string name="register_text">Register</string>
     <string name="transfer_text">Transfer</string>
+    <string name="welcome_String">Welcome ...</string>
 </resources>
